--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <title> * mikhail pakharev page * </title>
+        <title> *Moon Bird page* </title>
 </head>
 
-<body>
-    <p>Mikhail Pakharev page</p>
-    <a href="https://github.com/vodkin7"> Сслыка на мой git hub </a>
+<body style="background-color:powderblue;">
+	<style>
+		.fig {
+			text-align: center;
+		}
+	</style>
+	<p class="fig"><img src="moonbird.png" alt="Знак"></p>
+    <p style="text-align:center;"> * Сайт - портфолио * </p>
+    <br></br>
+    <p>Запись первая: 02.08.21</p>
+    <p1 class="fig">
+		Я решил научиться программировать и в будующем изменить свою
+		профессию. Выбор пал на веб-разработку. HTML & CSS. Так я назову
+		свой первый проект. В процессе обучения на этом сайте портфолио,
+		все будет видоизменяться. Паралельно я создал репозиторий в
+		системе контроля версий git, и буду выкладывать код туда. В
+		процессе написания сайта портфолио, буду узнавать и пробовать
+		выложить и запустить сайт на собственном сервере(В планах купить
+		vps). Начало занятий 02.08.21 года.
+    </p1>
+    
+    <a href="https://github.com/vodkin7";>
+		<p style="text-align:center;">Ссылка на мой git hub</p>
+    </a>
 </body>
 
 </html>
