Я добавил стили в код.

--- a/index.html
+++ b/index.html
@@ -2,43 +2,15 @@
 <html lang="en">
 <head>
         <title> *Moon Bird page* </title>
+        <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body style="background-color:powderblue;">
-	<style>
-		.first_block {
-			text-align: center;
-			font-family: hack;
-			font-size: 175%;
-		}
-		.second_block {
-			font-family: hack;
-			font-size: 145%;
-		}
-		.foot_block {
-			position: fixed; /* Фиксированное положение */
-			left: 0; bottom: 0; /* Левый нижний угол */
-			padding: 10px; /* Поля вокруг текста */
-			background: #39b54a; /* Цвет фона */
-			color: #fff; /* Цвет текста */
-			width: 100%; /* Ширина слоя */
-		}
-	</style>
 	<p class="first_block"><img src="moonbird.png" alt="Знак"></p>
     <p class="first_block"> * Сайт - портфолио * </p>
     <br></br>
-    <h1>Запись первая: 02.08.21</h1>
-    <p class="second_block">
-		*Я решил научиться программировать и в будующем изменить свою
-		профессию. Выбор пал на веб-разработку. HTML & CSS. Так я назову
-		свой первый проект. В процессе обучения на этом сайте портфолио,
-		все будет видоизменяться. Паралельно я создал репозиторий в
-		системе контроля версий git, и буду выкладывать код туда. В
-		процессе написания сайта портфолио, буду узнавать и пробовать
-		выложить и запустить сайт на собственном сервере(В планах купить
-		vps). Начало занятий 02.08.21 года.*
-    </p>
-    
+    <h1 class="first_block">Веб-страница Михаила Пахарева</h1>
+	<p class="first_block"><a href="02.08.html">* запись от 02.08.21</a></p>
     <a href="https://github.com/vodkin7";>
 		<p style="text-align:center;">Ссылка на мой git hub</p>
     </a>
