--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 </head>
 
 <body style="background-color:powderblue;">
-	<p class="first_block"><img src="moonbird.png" alt="Знак"></p>
-    <p class="first_block"> * Сайт - портфолио * </p>
+	<p><img src="moonbird.png" alt="Знак"></p>
+    <p> * Сайт - портфолио * </p>
     <br></br>
-    <h1 class="first_block">Веб-страница Михаила Пахарева</h1>
-	<p class="first_block"><a href="02.08.html">* запись от 02.08.21</a></p>
+    <h1>Веб-страница Михаила Пахарева</h1>
+	<p><a href="02.08.html">* запись от 02.08.21</a></p>
+	<p><a href="06.08.html">* запись от 06.08.21</a></p>
     <a href="https://github.com/vodkin7";>
-		<p style="text-align:center;">Ссылка на мой git hub</p>
+		<p>Ссылка на мой git hub</p>
     </a>
     
     <div class="foot_block">
