11/08/21 new updates my webpage

--- a/02.08.html
+++ b/02.08.html
@@ -5,7 +5,7 @@
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body style="background-color:powderblue;">
+<body style="background-color:white;">
 	<header><h1>Запись первая:</h1></header>
 	<main>
 		<p>
