--- a/06.08.html
+++ b/06.08.html
@@ -5,10 +5,15 @@
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body style="background-color:powderblue;">
+<body style="background-color:white;">
 	<header><h1>Запись вторая:</h1></header>
 	<main>
-		<p><a href="/home/redbird/Documents/HTML & CSS lessons/"><img src="06.08.png"></a></p>
+		<p>
+			<a>
+				<img src="06.08-480w.png" alt="day two screenshot">
+			</a>
+		</p>
+		
 		<p>
 			<ul>
 				<li>Продолжаю потихоньку изучать HTML и делать свой сайт
