--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <title> *Moon Bird page* </title>
+        <title> Mikhail Pakharev Webpage</title>
         <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body style="background-color:powderblue;">
-	<p><img src="moonbird.png" alt="Знак"></p>
-    <p> * Сайт - портфолио * </p>
+<body style="background-color:white;">
+    <p>this page is my portfolio</p>
     <br></br>
-    <h1>Веб-страница Михаила Пахарева</h1>
-	<p><a href="02.08.html">* запись от 02.08.21</a></p>
-	<p><a href="06.08.html">* запись от 06.08.21</a></p>
-    <a href="https://github.com/vodkin7";>
-		<p>Ссылка на мой git hub</p>
-    </a>
+    <h1>feel free to join me in my education</h1>
+	<p><a href="02.08.html"><li>2021 august 02</li></a></p>
+	<p><a href="06.08.html"><li>2021 august 06</li></a></p>
+	<div class="my_contact">
+		<a href="https://github.com/vodkin7";>
+			<img src="git.png" alt="Значек гитхаба">
+		</a>
+		<a href="https://telegram.me/vodkin7";>
+			<img src="telegram.png" alt="Значек телеграмма">
+		</a>
+    </div>
     
     <div class="foot_block">
-		&copy; 2021 Михаил Пахарев
+		&copy; 2021 Mikhail Pakharev
 	</div>
 </body>
 
