--- a/02.08.html
+++ b/02.08.html
@@ -5,7 +5,7 @@
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body style="background-color:white;">
+<body style="background-color:GhostWhite;">
 	<header><h1>Запись первая:</h1></header>
 	<main>
 		<p>
@@ -23,7 +23,7 @@
 		</p>
     </main>
     <div class="foot_block">
-		&copy; 2021 Михаил Пахарев
+		&copy; Mikhail Pakharev
 	</div>
 </body>
 
