--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
         <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body style="background-color:white;">
+<body style="background-color:GhostWhite;">
     <p>this page is my portfolio</p>
     <br></br>
     <h1>feel free to join me in my education</h1>
 		<p><a href="02.08.html"><li>2021 august 02</li></a></p>
 		<p><a href="06.08.html"><li>2021 august 06</li></a></p>
+		<p><a href="11.08.html"><li>2021 august 11</li></a></p>
 		<div class="my_contact">
 			<a href="https://github.com/vodkin7";>
 				<img src="git.png" alt="Значек гитхаба">
