--- a/06.08.html
+++ b/06.08.html
@@ -5,7 +5,7 @@
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body style="background-color:white;">
+<body style="background-color:GhostWhite;">
 	<header><h1>Запись вторая:</h1></header>
 	<main>
 		<p>
@@ -22,6 +22,9 @@
 				</li>
 			</ul>
 		</p>
+	<div class="foot_block">
+		&copy; Mikhail Pakharev
+	</div>
     </main>
 </body>
 
