Change my webblog

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta charset UTF=8>
         <title> Mikhail Pakharev Webpage</title>
         <link href="style.css" rel="stylesheet" type="text/css">
 </head>
@@ -16,7 +17,7 @@
 			<a href="https://github.com/vodkin7";>
 				<img src="git.png" alt="Значек гитхаба">
 			</a>
-			<a href="https://telegram.me/vodkin7";>
+			<a href="https://telegram.me/nonfreeworld";>
 				<img src="telegram.png" alt="Значек телеграмма">
 			</a>
 		</div>
