--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset UTF=8>
+	<meta charset="utf-8">
         <title> Mikhail Pakharev Webpage</title>
         <link href="style.css" rel="stylesheet" type="text/css">
 </head>
+	<link rel="icon" type="image/x-icon" href="https://nonfreeworld.space/favicon.ico">
 
 <body style="background-color:GhostWhite;">
     <p>this page is my portfolio</p>
     <br></br>
     <h1>feel free to join me in my education</h1>
-		<p><a href="02.08.html"><li>2021 august 02</li></a></p>
-		<p><a href="06.08.html"><li>2021 august 06</li></a></p>
-		<p><a href="11.08.html"><li>2021 august 11</li></a></p>
+		<p><a href="19.07.22.html"><li>2022 jule 19</li></a></p>
 		<div class="my_contact">
 			<a href="https://github.com/vodkin7";>
 				<img src="git.png" alt="Значек гитхаба">
@@ -23,7 +22,7 @@
 		</div>
     
     <div class="foot_block">
-		&copy; 2021 Mikhail Pakharev
+		&copy; 2022 Mikhail Pakharev
 	</div>
 </body>
 
