--- a/19.07.22.html
+++ b/19.07.22.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
+	<link rel="icon" type="image/x-icon" href="https://nonfreeworld.space/favicon.ico">
 
 <body style="background-color:GhostWhite;">
 	<header><h1>Запись от 19.07.22:</h1></header>
